deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actira
  labels:
    app.kubernetes.io/name: actira
